plugins {
    id 'java'
}

group 'IndividualPlan'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}
